--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -10,7 +10,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.ysered.savemylocation.MapsActivity">
+        tools:context=".map.MapActivity">
 
         <FrameLayout
             android:layout_width="wrap_content"
